{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 69,
  "lineage": "0e57e1ce-e5d1-85e1-a1ad-d7bb6d3bf806",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.80.249.165",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-28T01:01:37.538-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/dianerp/regions/asia-east1/addresses/dianerp-server-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "dianerp-server-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "dianerp",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dianerp/regions/asia-east1/addresses/dianerp-server-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T01:01:37.630-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dianerp/global/firewalls/dianerp-allow-backend",
            "log_config": [],
            "name": "dianerp-allow-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/dianerp/global/networks/default",
            "priority": 1000,
            "project": "dianerp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dianerp/global/firewalls/dianerp-allow-backend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T01:01:37.590-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dianerp/global/firewalls/dianerp-allow-http",
            "log_config": [],
            "name": "dianerp-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/dianerp/global/networks/default",
            "priority": 1000,
            "project": "dianerp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dianerp/global/firewalls/dianerp-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T01:01:37.644-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dianerp/global/firewalls/dianerp-allow-https",
            "log_config": [],
            "name": "dianerp-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/dianerp/global/networks/default",
            "priority": 1000,
            "project": "dianerp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dianerp/global/firewalls/dianerp-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-28T01:01:37.587-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dianerp/global/firewalls/dianerp-allow-ssh",
            "log_config": [],
            "name": "dianerp-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/dianerp/global/networks/default",
            "priority": 1000,
            "project": "dianerp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dianerp/global/firewalls/dianerp-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250312",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dianerp/zones/asia-east1-b/disks/dianerp-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-28T01:01:50.993-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "app": "backend",
              "environment": "production",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/dianerp/zones/asia-east1-b/instances/dianerp-server",
            "instance_id": "2962635157893015937",
            "label_fingerprint": "sJlVmklWWR4=",
            "labels": {
              "app": "backend",
              "environment": "production"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "false",
              "ssh-keys": "yicyun:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC88RJPkeTur6ETnLOixLCA0vLfnLrCCwH868SSm+5BD2vDfF/Nb4hL6lGoAp+UDjrjXmgqtm7YcW+7L7HZuXGOr5e8fi+4OSvR5gQnMB1wJKxJg0a95+sjKgbzoJ1HtXUvsqD0NfVZPoOuQSd0oBp4q9HNTJSt/y+Z1fJ49HMWJVu4j7q/n46XyFyilyweGiG3YLCs1OorwiMf8nXRnt67TDGrqyjzPI1M01UmGwSNo4F6BeTjmkkJRgg570ppMpPmeedWMLe/NDnre9uWAdBkvuVT97JzdMqhim74uhrQOOuZAZLRMHJy0VHCX4rQJR9LTU9WQYLgRGQs5QTunQKeszTYahYe+qvHs/XVIjgovRlx1rp1M+IVILAzTCTowGNSCuFHCm070NwuVPZvwzXgpctUUjc1HIYSBIS2ed+Jdc [...]
            },
            "metadata_fingerprint": "-2gpABoxctg=",
            "name": "dianerp-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.80.249.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dianerp/global/networks/default",
                "network_ip": "10.140.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dianerp/regions/asia-east1/subnetworks/default",
                "subnetwork_project": "dianerp"
              }
            ],
            "project": "dianerp",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dianerp/zones/asia-east1-b/instances/dianerp-server",
            "service_account": [
              {
                "email": "503980558684-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "terraform_labels": {
              "app": "backend",
              "environment": "production",
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_firewall.backend",
            "google_compute_firewall.http",
            "google_compute_firewall.https",
            "google_compute_firewall.ssh"
          ]
        }
      ]
    }
  ]
}